# Python_labs_2

lab1/: .gitignore  README.md  main.py
lab1/src/: receiver.py
lab1/src/core/: contracts.py  models.py
lab1/src/sources/: api.py  file.py  generator.py
lab1/tests/: conftest.py  test contracts.py  test_sources.py
lab2/: .gitignore  README.md  main.py  pyproject.toml
lab2/src/lab2_task_model.egg-info/: PKG-INFO  SOURCES.txt
lab2/src/task_platform/: descriptors.py  errors.py  task.py
lab2/tests/: test_task.py
lab3/: .gitignore  README.md  main.py
lab3/src/: iterator.py  models.py  queue.py
lab3/tests/: conftest.py  test_iterator.py  test_models.py  test_queue.py
